[package]
name = "quemoji"
version = "0.1.0"
edition = "2024"

[dependencies]
# eframe = { version = "0.33.0", features = ["wgpu"] }
# egui = "0.33.0"
emojis = "0.7.2"
enigo = { version = "0.6.1", features = [ "wayland"]}
fltk = "1.5.17"
lazy_static = "1.5.0"
rust-fuzzy-search = "0.1.1"
# slint = { version = "1.13.1", features = ["backend-default", "compat-1-2", "renderer-software", "std"], default-features = false }

# [build-dependencies]
# slint-build = "1.13.1"

[features]
fltk-bundled = ["fltk/fltk-bundled"]
